--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 * {
-    font-family: Jost,sans-serif;
+    font-family: inherit;
   }
   
   body {
-      background: #6fb431;
+    background: #6fb431;
   }
   header h1 {
     text-align: center;
     font-size: 60px;
+    margin-bottom: 0; 
   }
   
   header h2 {
     text-align: center;
+    display:block;
+    color: #FFF;
+    text-transform: inherit;
+    font-family: 'Molle', cursive;
+    font-size: 30px;
+    margin-top: 0;
   }
   
   .logo {
@@ -29,6 +36,7 @@
     padding: 10px;
     position: sticky;
     color: black;
+    font-weight: bold;
   }
   
   nav ul {
@@ -62,13 +70,19 @@
   }
   
   p {
+    display: block;
     text-align: center;
-    margin: 0 20px;
+    margin: auto;
+    padding: 20px;
+  }
+
+  span {
+    color: red;
   }
   
   .user-details {
-      margin: 100px auto 0;
-      padding: 40px 35px;
+      margin: 5px auto 0;
+      padding: 5px 35px;
       width: 90%;
       max-width: 600px;
       color: #000000;
@@ -79,8 +93,12 @@
       display: flex;
       justify-content: space-between;
       padding: 15px 20px;
-      border: none;
+      border-radius: 10px;
       font-size: 13px;
+  }
+
+  .tick-box {
+    display: flex;
   }
   
   input {
@@ -89,8 +107,10 @@
   }
   
   .details {
-    margin: 15px;
-    font-size: 17px;
+    padding: 0;
+    margin: 10px;
+    font-size: 13px;
+    font-weight: bold;
   }
   
   ul {
@@ -101,18 +121,22 @@
     margin: 20px auto 0;
     padding: 0;
     border-radius: 10px;
-    width: 70%;
+    width: 90%;
     max-width: 800px;
     color: #000000;
     text-align: center;
-    background: linear-gradient(135deg, #ffffff, #def1ff);
+    background: #fffdfd;
     box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  }
+
+  .box {
+    transform: scale(0.50);
   }
   
   button {
-    background: black;
+    background: #358404;
     font-size: 20px;
-    border: none;
+    border-width: black;
     border-radius: 5px;
     text-transform: uppercase;
     padding: 10px;
@@ -127,3 +151,42 @@
       max-width: 50%;
     }
   }
+
+  .contact {
+    margin: 20px;
+    display: block;
+    text-align: center;
+    color: white;
+  }
+
+  .contact a {
+    color: black;
+  }
+
+  footer{
+    font-size: 10px; 
+    color: rgb(255, 255, 255);
+    border-top: 1px solid #d4ebf4;
+    padding: 10px 0;
+    text-align: center;
+    margin: auto;
+    display: block;
+}
+
+
+
+
+  @import url('https://fonts.googleapis.com/css?family=Molle:400i');
+  body{
+    position: relitive;
+  }
+  /* customizable snowflake styling */
+  .snowflake {
+    color: #fff;
+    font-size: 1em;
+    font-family: 'Molle', cursive;
+    text-shadow: 0 0 1px #000;
+  }
+  
+  @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
+  
