--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@
       padding: 15px 20px;
       border-radius: 10px;
       font-size: 13px;
+      margin: auto;
   }
 
   .title {
@@ -116,6 +117,8 @@
     padding: 15px;
     font-size: 13px;
     font-weight: bold;
+    margin: auto; 
+    justify-content: space-between;
   }
   
   input {
@@ -207,10 +210,15 @@
   }
 
   @media screen and (max-width:767px){
-  
+    .input-box {
+      max-width: 100%;
+    }
   }
   
   @media screen and (min-width:767px) and (max-width:1023px){
+    .container-form {
+      max-width: 50%;
+    }
     
   }
   
